--- a/manual/path.tex
+++ b/manual/path.tex
@@ -15,16 +15,16 @@ connected segments, which will be called \textit{sub paths} in the
 following.
 
 Usually, a path is constructed by passing a list of the path
-primitives \verb|moveto|, \verb|lineto|, \verb|curveto|, etc., to the
-constructor of the \verb|path| class. The following code snippet, for
-instance, defines a path \verb|p| that consists of a straight line
+primitives \class{moveto}, \class{lineto}, \class{curveto}, etc., to the
+constructor of the \class{path} class. The following code snippet, for
+instance, defines a path \var{p} that consists of a straight line
 from the point $(0, 0)$ to the point $(1, 1)$
 \begin{verbatim}
 from pyx import *
 p = path.path(path.moveto(0, 0), path.lineto(1, 1))
 \end{verbatim}
-Equivalently, one can also use the predefined \verb|path| subclass
-\verb|line| and write
+Equivalently, one can also use the predefined \class{path} subclass
+\class{line} and write
 \begin{verbatim}
 p = path.line(0, 0, 1, 1)
 \end{verbatim}
@@ -32,18 +32,18 @@ p = path.line(0, 0, 1, 1)
 While you can already do some geometrical operations with the
 just created path (see next section), we need another \PyX{} object
 in order to be actually able to draw the path, namely
-an instance of the \verb|canvas| class. By convention, we use
-the name \verb|c| for this instance:
+an instance of the \class{canvas} class. By convention, we use
+the name \var{c} for this instance:
 \begin{verbatim}
 c = canvas.canvas()
 \end{verbatim}
-In order to draw the path on the canvas, we use the \verb|stroke| method
-of the \verb|canvas| class, i.e.,
+In order to draw the path on the canvas, we use the \method{stroke()} method
+of the \class{canvas} class, i.e.,
 \begin{verbatim}
 c.stroke(p)
 c.writeEPSfile("line")
 \end{verbatim}
-To complete the example, we have added a \verb|writeEPSfile| call,
+To complete the example, we have added a \method{writeEPSfile()} call,
 which writes the contents of the canvas into the given file.
 
 Let us as second example define a path which consists of more than 
@@ -53,12 +53,12 @@ cross = path.path(path.moveto(0, 0), path.rlineto(1, 1),
                   path.moveto(1, 0), path.rlineto(-1, 1))
 \end{verbatim}
 The first sub path is again a straight line from $(0, 0)$ to $(1, 1)$,
-with the only difference that we now have used the \verb|rlineto|
+with the only difference that we now have used the \class{rlineto}
 class, whose arguments count relative from the last point in the path.
-The second \verb|moveto| instance opens a new sub path starting at the
+The second \class{moveto} instance opens a new sub path starting at the
 point $(1, 0)$ and ending at $(0, 1)$. Note that although both lines
 intersect at the point $(1/2, 1/2)$, they count as separate sub paths.
-The general rule is that each occurence of \verb|moveto| opens a new
+The general rule is that each occurence of \class{moveto} opens a new
 sub path. This means that if one wants to draw a rectangle, one should
 not use
 \begin{verbatim}
@@ -84,7 +84,7 @@ rect2 = path.path(path.moveto(0, 0), path.lineto(0, 1),
 \label{fig:rects}
 \end{figure}
 Note that for the last straight line of the rectangle (from $(0, 1)$
-back to the origin at $(0, 0)$)) we have used \verb|closepath|.  This
+back to the origin at $(0, 0)$)) we have used \class{closepath}.  This
 directive adds a straight line from the current point to the first
 point of the current sub path and furthermore \textit{closes} the sub
 path, i.e., it joins the beginning and the end of the line segment.
@@ -96,6 +96,8 @@ c.stroke(rect1, [deco.filled([color.grey(0.95)])])
 \end{verbatim}
 The important point to remember here is that when filling a path, PostScript
 automatically closes it.
+
+XXX more on styles and attributes and reference to corresponding section
 
 Of course, rectangles are also predefined in \PyX{}, so above we could
 have as well written
@@ -126,15 +128,15 @@ code which gives the result shown in Fig.~\ref{fig:radii}
 %\caption{}
 \label{fig:radii}
 \end{figure}
-Passing another path, here \verb|line|, to the \verb|intersect| method
-of \verb|circle|, we obtain a tuple of parameter values of the
+Passing another path, here \var{line}, to the \method{intersect()} method
+of \var{circle}, we obtain a tuple of parameter values of the
 intersection points. The first element of the tuple is a list of
-parameter values for the path whose \verb|intersect| method we have
+parameter values for the path whose \method{intersect()} method we have
 called, the second element is the corresponding list for the path
 passed as argument to this method. In the present example, we only
-need one list of parameter values, namely \verb|isects_circle|.
+need one list of parameter values, namely \var{isects_circle}.
 Iterating over the elements of this list, we draw the radii, using the
-\verb|at| path method to obtain the point corresponding to the
+\method{at()} path method to obtain the point corresponding to the
 parameter value.
 
 Another powerful feature of \PyX{} is its ability to split paths at a
@@ -142,7 +144,7 @@ given set of parameters. For instance, in order to fill in the
 previous example the segment of the circle delimited by the straight
 line (cf.\ Fig.~\ref{fig:radii2}), you first have to construct a path
 corresponding to the outline of this segment. The following code
-snippet does yield this \verb|segment|
+snippet does yield this \var{segment}
 \begin{verbatim}
 arc1, arc2 = circle.split(isects_circle)
 arc = arc1.arclen()<arc2.arclen() and arc1 or arc2
@@ -157,17 +159,17 @@ segment = line2 << arc
 %\caption{}
 \label{fig:radii2}
 \end{figure}
-Here, we first split the circle using the \verb|split| method passing
+Here, we first split the circle using the \method{split()} method passing
 the list of parameters obtained above. Since the circle is closed,
-this yields two arc segments. We then use the \verb|arclen|, which
+this yields two arc segments. We then use the \method{arclen()}, which
 returns the arc length of the path, to find the shorter of the two
 arcs. Before splitting the line, we have to take into account that
-the \verb|split| method only accepts a sorted list of parameters.
+the \method{split()} method only accepts a sorted list of parameters.
 Finally, we join the straight line and the arc segment. For
 this, we make use of the \verb|<<| operator, which not only adds
-the paths (which could be done using \verb|line2 + arc|), but also
-joins the last sub path of \verb|line2| and the first one of
-\verb|arc|. Thus, \verb|segment| consists of only a single sub path
+the paths (which could be done using \samp{line2 + arc}), but also
+joins the last sub path of \var{line2} and the first one of
+\var{arc}. Thus, \var{segment} consists of only a single sub path
 and filling works as expected.
 
 XXX reverse, reversed, parametrisation, arclen parameters
@@ -184,7 +186,14 @@ documented in the present section.
 
 \begin{classdesc}{path}{*pathels}
 This class represents a PostScript like path consisting of the
-elements \var{pathels}.
+path elements \var{pathels}.
+
+All possible path elements are described in Sect.~\ref{path:pathel}.
+Note that there are restrictions on the first path element and likewise
+on each path element after a \class{closepath} directive. In both cases,
+no current point is defined and the path element has to be an instance
+of one of the following classes: \class{moveto}, \class{arc}, and
+\class{arcn}.
 \end{classdesc}
 
 Instances of the class \class{path} provide the following
@@ -283,8 +292,8 @@ Returns the total arc length of the path.$^\dagger$
   discontinuities in the path, the limit from below is returned.$^\dagger$
 \end{methoddesc}
 
-\begin{methoddesc}{tranformed}{trafo}
-  Returns the path tranformed according to the linear transformation
+\begin{methoddesc}{transformed}{trafo}
+  Returns the path transformed according to the linear transformation
   \var{trafo}. Here, \texttt{trafo} must be an instance of the
   \class{trafo.trafo} class.$^\dagger$
 \end{methoddesc}
@@ -292,26 +301,33 @@ Returns the total arc length of the path.$^\dagger$
 Some notes on the above:
 \begin{itemize}
 \item The $\dagger$ denotes methods which require a prior
-  conversion of the path into a \verb|normpath| instance. This is
-  done automatically, but if you need to call such methods often,
-  it is a good idea to do the conversion once for performance reasons.
-\item Instead of using the \verb|glue| method, you can also glue two
+  conversion of the path into a \class{normpath} instance. This is
+  done automatically, but if you need to call such methods often or
+  if you need to change the precision used for this conversion, 
+  it is a good idea to manually perform the conversion.
+\item Instead of using the \method{joined()} method, you can also join two
 paths together with help of the \verb|<<| operator, for instance
-\verb|p = p1 << p2|.
-\item In the methods accepting both a parameter value \verb|param| and
-  an arc length \verb|arclen|, exactly one of these arguments has to
+\samp{p = p1 << p2}.
+\item In the methods accepting both a parameter value \var{param} and
+  an arc length \var{arclen}, exactly one of these arguments has to
   provided.
 \end{itemize}
 
 \subsection{Path elements}
+
+\label{path:pathel}
 
 The class \class{pathel} is the superclass of all PostScript path
 construction primitives. It is never used directly, but only by
 instantiating its subclasses, which correspond one by one to the
 PostScript primitives.
 
-The following operation move the current point and open a new
-sub path:
+Except for the path elements ending in \code{_pt}, all coordinates
+passed to the path elements can be given as number (in which case they
+are interpreted as user units with the currently set default type) or in
+\PyX\ lengths.
+
+The following operation move the current point and open a new sub path:
 
 \begin{classdesc}{moveto}{x, y}
 Path element which sets the current point to the absolute coordinates (\var{x},
@@ -382,23 +398,34 @@ defined relative to the current point by the coordinates
 (\var{dx1}, \var{dy1}), (\var{dx2}, \var{dy2}), and (\var{dx3}, \var{dy3}).
 \end{classdesc}
 
+Note that when calculating the bounding box (see Sect.~\ref{bbox}) of
+B\'ezier curves, \PyX{} uses for performance reasons the so-called
+control box, i.e., the smallest rectangle enclosing the four control
+points of the B\'ezier curve. In general, this is not the smallest
+rectangle enclosing the B\'ezier curve.
+
 Finally, an open sub path can be closed using:
 
 \begin{classdesc}{closepath}{}
 Path element which closes the current subpath.
 \end{classdesc}
 
-XXX \class{multicurveto} and \class{multilineto}
+For performance reasons, two non-PostScript path elements are defined, 
+which perform multiple identical operations:
 
-Some notes on the above:
-\begin{itemize}
-\item All coordinates can be given as number (in which case they are
-interpreted as user units with the currently set default type or in
-\PyX\ lengths.
-\item The bounding box (see below) of B\'ezier curves is actually 
-  the box enclosing the control points, \textit{i.e.}\ not neccesarily the 
-  smallest rectangle enclosing the B\'ezier curve.
-\end{itemize}
+\begin{classdesc}{multilineto_pt}{points}
+Path element which appends straight line segments starting from
+the current point and going through the list of points given 
+in the \var{points} argument. All coordinates have to 
+be given in PostScript points.
+\end{classdesc}
+
+\begin{classdesc}{multicurveto_pt}{points}
+Path element which appends B\'ezier curve segments starting from
+the current point and going through the list of each three control
+points given in the \var{points} argument.
+\end{classdesc}
+
 
 \subsection{Class \class{normpath}}
 
@@ -419,12 +446,27 @@ in all \class{normpath} calculations by means of the keyword argument
 \var{epsilon}, which defaults to $10^{-5}$.  Note that the sum of a
 \class{normpath} and a \class{path} always yields a \class{normpath}.
 
-XXX additional operations of normpaths
+In addition to the \class{path} methods, a \class{normpath} instance
+also offers the following methods, which operate on the instance itself:
+
+\begin{methoddesc}{join}{other}
+  Join \var{other}, which has to be a \class{path} instance, to
+  the \class{normpath} instance.
+\end{methoddesc}
+
+\begin{methoddesc}{reverse}{}
+  Reverses the \class{normpath} instance.
+\end{methoddesc}
+
+\begin{methoddesc}{transform}{trafo}
+  Transforms the \class{normpath} instance according to the linear
+  transformation \var{trafo}.
+\end{methoddesc}
 
 \subsection{Predefined paths}
 
-For your convenience, some special PostScript paths are already defined.
-All of them are sub classes of the \class{path} class.
+For your convenience, some oft-used paths are already pre-defined. All
+of them are sub classes of the \class{path} class.
 
 \begin{classdesc}{line}{x1, y1, x2, y2, x3, y3}
 A straight line from the point (\var{x1}, \var{y1}) to the point (\var{x2}, \var{y2}).
