--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -50,18 +50,19 @@ in publication-ready quality.
 \tableofcontents
 
 \include{intro}
+\include{graphics}
 \include{path}
-\include{unit}
-\include{trafo}
 \include{canvas}
 \include{text}
+\include{graph}
+\include{axis}
 \include{box}
 \include{connector}
 \include{epsfile}
 \include{bbox}
 \include{color}
-\include{graph}
-\include{axis}
+\include{unit}
+\include{trafo}
 \appendix
 \include{mathtree}
 \include{colorname}
