--- a/manual/text.tex
+++ b/manual/text.tex
@@ -1,4 +1,4 @@
-\chapter{Module text: \TeX/\LaTeX{} interface}
+\chapter{Module \module{text}: \TeX/\LaTeX{} interface}
 \label{module:text}
 
 \section{Basic functionality}
