added sectionauthor directive
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1584 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -1,6 +1,8 @@
 \section{Module \module{canvas}}
 \label{canvas}
 
+\sectionauthor{J\"org Lehmann}{joergl@users.sourceforge.net} 
+
 One of the central modules for the PostScript access in \PyX{} is
 named \verb|canvas|. Besides providing the class \verb|canvas|, which
 presents a collection of visual elements like paths, other canvases,
