--- a/manual/path.tex
+++ b/manual/path.tex
@@ -1,5 +1,7 @@
 \section{Module \module{path}}
 
+\sectionauthor{J\"org Lehmann}{joergl@users.sourceforge.net} 
+
 \label{path}
 
 The \module{path} module defines several important classes which are
